--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -62,7 +62,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                             <h3>Aceitunas</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -72,7 +72,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
                             <h3>Frutas</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -82,7 +82,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
                             <h3>Cacao</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -92,7 +92,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
                             <h3>Granos</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -102,7 +102,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
                             <h3>Verduras</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -112,7 +112,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                             <h3>Aceitunas</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -122,7 +122,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
                             <h3>Frutas</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -132,7 +132,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
                             <h3>Cacao</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -142,7 +142,7 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
                             <h3>Granos</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
@@ -152,12 +152,15 @@
                         <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
                             <h3>Verduras</h3>
                             <div class="sec-2-oculto d-flex justify-content-center">
-                                <p>VER PRODUCTO</p>
+                                <p>VER PRODUCTOS</p>
                             </div>
                         </div>
                     </a>
                 </ng-template>
             </owl-carousel-o>
+        </div>
+        <div class="progress" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 8px">
+            <div class="progress-bar" style="width: 35%"></div>
         </div>
     </div>
 
