--- a/src/app/pages/libro-reclamaciones/libro-reclamaciones.component.html
+++ b/src/app/pages/libro-reclamaciones/libro-reclamaciones.component.html
@@ -14,7 +14,7 @@
             <p>
                 <span class="color-verde">TE RECORDAMOS QUE...</span><br>
                 <span class="color-verde">RECLAMO:</span> Disconformidad relacionada a los productos o servicios.<br>
-                <span class="color-verde">QUEJA:</span> Disconformidad respecto a la atención a los clientes por parte de un empleado, no relacionada a los productos o servicios.
+                <span class="color-verde" style="font-weight: 800;">QUEJA:</span> Disconformidad respecto a la atención a los clientes por parte de un empleado, no relacionada a los productos o servicios.
             </p>
             <p>*La formulación del reclamo no impide acudir a otras vías de solución de controversias ni es requisito previo para interponer una denuncia ante el INDECOPI.</p>
         </div>
