--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -11,9 +11,9 @@
     flex: none;
     color: white;
     font-weight: 400;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-right: 10px;
-    padding: 2px 14px;
+    padding: 4px 14px;
 }
 .nav-menu>.nav-link:hover {
     color: #2db18a;
@@ -40,10 +40,10 @@
     margin-right: 10px;
 }
 .mensaje-header{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-bottom: 0;
     color: white;
-    line-height: 1.3rem;
+    line-height: normal;
 }
 .div-notificacion{
     position: relative;
@@ -80,7 +80,7 @@
         width: 170px;
     }
     .nav-menu>.nav-link {
-        font-size: 1.2rem;
+        font-size: 1rem;
         line-height: normal;
     }
     .img-usuario{
@@ -90,7 +90,7 @@
         height: 40px;
     }
     .mensaje-header{
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     .num-notificacion{
         font-size: 1rem;
@@ -136,7 +136,7 @@
         padding-right: 50px;
     }
     .nav-menu>.nav-link {
-        font-size: 1.1rem;
+        font-size: 0.9rem;
     }
     .img-usuario{
         height: 25px;
@@ -155,7 +155,7 @@
         visibility: hidden !important;
     }
     .nav-menu>.nav-link {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 }
 @media (max-width: 800px) {
