--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -26,18 +26,18 @@
 	padding-right: 30px;
 }
 .slider-div h1{
-	font-size: 5rem;
+	font-size: 4.6rem;
 	font-weight: 600;
-	line-height: 5rem;
+	line-height: 4.6rem;
 	color: #2db18a;
 	margin-bottom: 30px;
 }
 .slider-div a{
 	background-color: #11434c;
 	color: white;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 	font-weight: 500;
-	padding: 6px 25px 3px;
+	padding: 10px 25px;
 	border-radius: 10px;
 	border: 2px solid #11434c;
 }
@@ -48,8 +48,10 @@
 }
 .carousel-indicators{
 	bottom: -50px;
+	align-items: center;
 }
 .carousel-indicators [data-bs-target] {
+	width: 25px;
 	height: 7px;
 	border: none;
 	border-radius: 5px;
@@ -57,6 +59,8 @@
 }
 .carousel-indicators .active{
 	background-color: #11434c !important;
+	width: 40px;
+	height: 10px;
 }
 .carousel-img{
 	display: none !important;
@@ -75,9 +79,9 @@
 	padding-right: 130px;
 }
 .section-2 > h2{
-	font-size: 3.4rem;
+	font-size: 3rem;
 	color: #11434c;
-	font-weight: 600;
+	font-weight: 700;
 	margin-bottom: 30px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -93,7 +97,7 @@
 	position: relative;
 	height: 440px !important;
 	overflow: hidden;
-	border-radius: 7px;
+	border-radius: 20px;
 	margin-left: 15px;
 	margin-right: 15px;
 	/* width: 302px; */
@@ -103,9 +107,10 @@
 	writing-mode: vertical-lr;
     transform: rotate(180deg);
 	color: white;
-	font-size: 3.5rem;
+	font-size: 3rem;
 	margin-right: 10px;
 	margin-bottom: 30px;
+	font-weight: 600;
 }
 .sec-2-oculto{
 	display: none !important;
@@ -119,7 +124,7 @@
 	/* text-align: center; */
 	margin-bottom: 0;
 	color: white;
-	font-size: 1.3rem;
+	font-size: 1rem;
 }
 .seccion-prod:hover .sec-2-oculto{
 	display: flex !important;
@@ -137,6 +142,15 @@
 :host ::ng-deep .section-2 .owl-next{
 	right: -57px;
 	transform: translate(-50%, -50%);
+}
+.section-2 .progress{
+	max-width: 800px;
+	margin: auto;
+	background-color: #d8eee8;
+	margin-top: 20px;
+}
+.section-2 .progress-bar{
+	background-color: #11434c !important;
 }
 // .section-2 .slick-prev,
 // .section-2 .slick-next
@@ -188,9 +202,9 @@
 	padding-right: 140px;
 }
 .section-3 h2{
-	font-size: 3.4rem;
+	font-size: 3rem;
 	color: #11434c;
-	font-weight: 600;
+	font-weight: 700;
 	margin-bottom: 10px;
 }
 .section-3-header{
@@ -199,9 +213,9 @@
 .btn-ver-catalogo{
 	background-color: #11434c;
 	color: white;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 	font-weight: 500;
-	padding: 6px 25px 3px;
+	padding: 10px 25px;
 	border-radius: 10px;
 	border: 2px solid #11434c;
 }
@@ -221,15 +235,15 @@
 }
 .seccion-3-prod > h4{
 	color: #11434c;
-	font-size: 1.6rem;
+	font-size: 1.5rem;
 	font-weight: 600;
 	margin-top: 10px;
 	margin-bottom: 5px;
 }
 .seccion-3-prod > p{
 	color: #2db18a;
-	font-size: 2.1rem;
-	line-height: 2.1rem;
+	font-size: 2rem;
+	line-height: 2rem;
 	font-weight: 600;
 }
 .seccion-3-prod-cont{
@@ -256,7 +270,7 @@
 	/* text-align: center; */
 	margin-bottom: 0;
 	color: white;
-	font-size: 1.3rem;
+	font-size: 1rem;
 }
 .seccion-3-prod:hover .sec-3-oculto{
 	display: flex !important;
@@ -278,7 +292,7 @@
 	margin-bottom: 15px;
 }
 .section-4 h2{
-	font-size: 3.4rem;
+	font-size: 3rem;
 	color: #11434c;
 	font-weight: 600;
 	margin-bottom: 10px;
@@ -286,9 +300,9 @@
 .btn-ver-novedades{
 	background-color: #11434c;
 	color: white;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 	font-weight: 500;
-	padding: 6px 25px 3px;
+	padding: 10px 25px;
 	border-radius: 10px;
 	border: 2px solid #11434c;
 }
@@ -310,8 +324,8 @@
 }
 .seccion-4-novedad > h4{
 	color: #11434c;
-	font-size: 1.6rem;
-	font-weight: 600;
+	font-size: 1.5rem;
+	font-weight: 700;
 	/* margin-top: 10px; */
 	margin-bottom: 10px;
 }
@@ -336,7 +350,7 @@
 	/* text-align: center; */
 	margin-bottom: 0;
 	color: white;
-	font-size: 1.3rem;
+	font-size: 1rem;
 }
 .seccion-4-novedad:hover .sec-4-oculto{
 	display: flex !important;
@@ -344,14 +358,14 @@
 }
 .novedad-fecha{
 	color: #2db18a;
-	font-size: 1.3rem;
+	font-size: 1.1rem;
 	margin-bottom: 0;
 }
 .novedad-texto{
 	color: black;
 	text-align: justify;
-	font-size: 1.1rem;
-	line-height: 1.1rem;
+	font-size: 1rem;
+	line-height: 1rem;
 }
 
 
@@ -385,7 +399,7 @@
 		padding-right: 100px;
 	}
 	.slider-div h1{
-		font-size: 4.5rem;
+		font-size: 4.1rem;
 		line-height: normal;
 	}
 	.section-2{
@@ -408,7 +422,7 @@
 		padding-right: 70px;
 	}
 	.slider-div h1{
-		font-size: 3.9rem;
+		font-size: 3.5rem;
 	}
 	.section-2{
 		padding-left: 60px;
@@ -430,14 +444,14 @@
 		padding-right: 50px;
 	}
 	.slider-div h1{
-		font-size: 3.1rem;
+		font-size: 2.7rem;
 	}
 	.section-2{
 		padding-left: 40px;
 		padding-right: 40px;
 	}
 	.section-2 > h2{
-		font-size: 3rem;
+		font-size: 2.6rem;
 		line-height: normal;
 	}
 	.section-3{
@@ -445,7 +459,7 @@
 		padding-right: 50px;
 	}
 	.section-3-header > h2{
-		font-size: 3rem;
+		font-size: 2.6rem;
 		line-height: normal;
 	}
 	.section-4{
@@ -453,7 +467,7 @@
 		padding-right: 50px;
 	}
 	.section-4-header > h2{
-		font-size: 3rem;
+		font-size: 2.6rem;
 		line-height: normal;
 	}
 }
@@ -472,7 +486,7 @@
 		padding-right: 20px;
 	}
 	.section-2 > h2{
-		font-size: 2.8rem;
+		font-size: 2.4rem;
 		padding-left: 0;
 		padding-right: 0;
 	}
@@ -481,14 +495,14 @@
 		padding-right: 30px;
 	}
 	.section-3-header > h2{
-		font-size: 2.8rem;
+		font-size: 2.4rem;
 	}
 	.section-4{
 		padding-left: 30px;
 		padding-right: 30px;
 	}
 	.section-4-header > h2{
-		font-size: 2.8rem;
+		font-size: 2.4rem;
 	}
 }
 
@@ -518,7 +532,7 @@
 }
 @media (max-width: 576px) {
 	.slider-div h1{
-		font-size: 2.6rem;
+		font-size: 2.2rem;
 	}
 	.seccion-prod-cont{
 		height: 400px !important;
@@ -531,7 +545,7 @@
 		padding-right: 16px;
 	}
 	.slider-div h1{
-		font-size: 2.4rem;
+		font-size: 2rem;
 		text-align: center;
 	}
 	.slider-div{
@@ -539,14 +553,14 @@
 		align-items: center !important;
 	}
 	.slider-div a{
-		font-size: 1.1rem;
+		font-size: 0.9rem;
 	}
 	.section-2{
 		padding-left: 16px;
 		padding-right: 16px;
 	}
 	.section-2 > h2{
-		font-size: 2.4rem;
+		font-size: 2rem;
 		text-align: center;
 	}
 	.section-3{
@@ -557,11 +571,11 @@
 		align-items: center !important;
 	}
 	.section-3-header > h2{
-		font-size: 2.4rem;
+		font-size: 2rem;
 		text-align: center;
 	}
 	.seccion-3-prod > h4{
-		font-size: 1.3rem;
+		font-size: 1.2rem;
 	}
 	.seccion-3-prod > p{
 		font-size: 1.8rem;
@@ -577,7 +591,7 @@
 		align-items: center !important;
 	}
 	.section-4-header > h2{
-		font-size: 2.4rem;
+		font-size: 2rem;
 		text-align: center;
 	}
 	.btn-ver-novedades{
@@ -587,15 +601,15 @@
 
 @media (max-width: 375px) {
 	.slider-div h1{
-		font-size: 2.2rem;
+		font-size: 1.8rem;
 	}
 	.section-2 > h2{
-		font-size: 2.2rem;
+		font-size: 1.8rem;
 	}
 	.section-3-header > h2{
-		font-size: 2.2rem;
+		font-size: 1.8rem;
 	}
 	.section-4-header > h2{
-		font-size: 2.2rem;
+		font-size: 1.8rem;
 	}
 }
