--- a/src/app/pages/libro-reclamaciones/libro-reclamaciones.component.scss
+++ b/src/app/pages/libro-reclamaciones/libro-reclamaciones.component.scss
@@ -13,23 +13,23 @@
     width: 1050px;
 }
 .contenedor > h1{
-    font-size: 3.3rem;
+    font-size: 3rem;
     color: #11434c;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: center;
 }
 .contenedor > p{
-    font-size: 1.2rem;
-    line-height: 1.2rem;
+    font-size: 1.1rem;
+    line-height: 1.4rem;
     margin-bottom: 15px;
     text-align: justify;
 }
 .contenedor > h3{
     color: #11434c;
-    font-size: 1.4rem;
-    font-weight: 600;
-    margin-bottom: 5px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-bottom: 10px;
     margin-top: 25px;
 }
 .color-verde{
@@ -49,14 +49,14 @@
     border-radius: 10px;
 }
 .cuadro-verde{
-    margin-top: 10px;
+    margin-top: 30px;
     border: 2px solid #2bb289;
     padding: 30px 30px 5px;
     border-radius: 10px;
 }
 .cuadro-verde > p{
-    font-size: 1.2rem;
-    line-height: 1.2rem;
+    font-size: 1.1rem;
+    line-height: 1.4rem;
     margin-bottom: 20px;
     text-align: justify;
 }
@@ -74,7 +74,7 @@
         padding-right: 70px;
     }
     .contenedor > h1{
-        font-size: 3rem;
+        font-size: 2.7rem;
     }
 }
 @media (max-width: 1200px) {
@@ -83,7 +83,7 @@
         padding-right: 50px;
     }
     .contenedor > h1{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 }
 @media (max-width: 992px) {
@@ -100,10 +100,10 @@
         padding-right: 16px;
     }
     .contenedor > h1{
-        font-size: 2.2rem;
+        font-size: 1.9rem;
     }
-    .contenedor p{
-        font-size: 1.1rem;
+    .contenedor > p{
+        font-size: 1rem;
         line-height: normal;
     }
     .cuadro-verde{
