--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @font-face {
-    font-family: Myriad;
-    src: url('assets/fonts/MyriadVariableConcept-Roman.otf');
+    // font-family: Myriad;
+    // src: url('assets/fonts/MyriadVariableConcept-Roman.otf');
+    font-family: Inter;
+    src: url('assets/fonts/Inter-VariableFont_slnt,wght.ttf');
 }
 
 *{
     /* font-family: 'Baloo Chettan 2', cursive; */
-    font-family: Myriad;
+    // font-family: Myriad;
+    font-family: Inter;
 }
 .overflow-x-hidden{
     overflow-x: hidden !important;
